--- a/trancas.html
+++ b/trancas.html
@@ -96,11 +96,11 @@
     </section>
 
 <main>
-  <div class ="card_container">
+  <div class="card_container">
     <div class="card">
       <img scr="https://media.istockphoto.com/id/1330293099/vector/female-avatar-icon.jpg?s=612x612&w=0&k=20&c=PRXMHA1KOOhmpIH7zb5dVuBvkOCVoWZDAYeQBiUwJFw=" alt="Avatar" style="width:100%>
         <div class="container">
-      <h4><b> John Doe</</b></h4>
+      <h4><b> John Doe</b></h4>
       <p> Architect & Engineer </p>
     </div>
   </div>
