--- a/trancas.html
+++ b/trancas.html
@@ -96,7 +96,7 @@
     </section>
 
 <main>
-  <div class="card_container">
+  <div class="card">
     <div class="card">
       <img scr="https://media.istockphoto.com/id/1330293099/vector/female-avatar-icon.jpg?s=612x612&w=0&k=20&c=PRXMHA1KOOhmpIH7zb5dVuBvkOCVoWZDAYeQBiUwJFw=" alt="Avatar" style="width:100%>
         <div class="container">
