--- a/trancas.html
+++ b/trancas.html
@@ -96,15 +96,15 @@
     </section>
 
 <main>
+<div class="card_container">
   <div class="card">
-    <div class="card">
-      <img scr="https://media.istockphoto.com/id/1330293099/vector/female-avatar-icon.jpg?s=612x612&w=0&k=20&c=PRXMHA1KOOhmpIH7zb5dVuBvkOCVoWZDAYeQBiUwJFw=" alt="Avatar" style="width:100%>
-        <div class="container">
-      <h4><b> John Doe</b></h4>
-      <p> Architect & Engineer </p>
+    <img src="https://media.istockphoto.com/id/1330293099/vector/female-avatar-icon.jpg?s=612x612&w=0&k=20&c=PRXMHA1KOOhmpIH7zb5dVuBvkOCVoWZDAYeQBiUwJFw=" alt="Avatar" style="width:100%">
+    <div class="container">
+      <h4><b>John Doe</b></h4> 
+      <p>Architect & Engineer</p> 
     </div>
   </div>
- 
+  
   <div class="card">
     <img src="https://media.istockphoto.com/id/1330273554/vector/female-avatar-icon.jpg?s=612x612&w=0&k=20&c=Da_L6eUftAYN1nNphgDSbcmbIXXsOD8SBidEGIQf2yw=" alt="Avatar" style="width:100%">
     <div class="container">
