--- a/trancas.html
+++ b/trancas.html
@@ -105,18 +105,13 @@
     </div>
   </div>
   
- <div class="flip-card">
-  <div class="flip-card-inner">
-    <div class="flip-card-front">
-    <img src="https://media.istockphoto.com/id/1330273554/vector/female-avatar-icon.jpg?s=612x612&w=0&k=20&c=Da_L6eUftAYN1nNphgDSbcmbIXXsOD8SBidEGIQf2yw=" alt="Avatar" style="width:100%">
-  </div>
-    <div class="flip-card-back">
-      <h1>John Doe</h1>
-      <p>Architect & Engineer</p>
+ <div class="card">
+    <img src="https://media.istockphoto.com/id/1330293099/vector/female-avatar-icon.jpg?s=612x612&w=0&k=20&c=PRXMHA1KOOhmpIH7zb5dVuBvkOCVoWZDAYeQBiUwJFw=" alt="Avatar" style="width:100%">
+    <div class="container">
+      <h4><b>John Doe</b></h4> 
+      <p>Architect & Engineer</p> 
     </div>
   </div>
-</div>
-
 
   <div class="card">
     <img src="https://media.istockphoto.com/id/1330293099/vector/female-avatar-icon.jpg?s=612x612&w=0&k=20&c=PRXMHA1KOOhmpIH7zb5dVuBvkOCVoWZDAYeQBiUwJFw=" alt="Avatar" style="width:100%">
