--- a/trancas.html
+++ b/trancas.html
@@ -96,135 +96,44 @@
     </section>
 
 <main>
-<div class="card_container">
-  <div class="card">
-    <img src="https://media.istockphoto.com/id/1330293099/vector/female-avatar-icon.jpg?s=612x612&w=0&k=20&c=PRXMHA1KOOhmpIH7zb5dVuBvkOCVoWZDAYeQBiUwJFw=" alt="Avatar" style="width:100%">
-    <div class="container">
-      <h4><b>John Doe</b></h4> 
-      <p>Architect & Engineer</p> 
-    </div>
-  </div>
-  
- <div class="card">
-    <img src="https://media.istockphoto.com/id/1330273554/vector/female-avatar-icon.jpg?s=612x612&w=0&k=20&c=Da_L6eUftAYN1nNphgDSbcmbIXXsOD8SBidEGIQf2yw=" alt="Avatar" style="width:100%">
-    <div class="container">
-      <h4><b>John Doe</b></h4> 
-      <p>Architect & Engineer</p> 
-    </div>
-  </div>
-
-  <div class="card">
-    <img src="https://media.istockphoto.com/id/1330293099/vector/female-avatar-icon.jpg?s=612x612&w=0&k=20&c=PRXMHA1KOOhmpIH7zb5dVuBvkOCVoWZDAYeQBiUwJFw=" alt="Avatar" style="width:100%">
-    <div class="container">
-      <h4><b>John Doe</b></h4> 
-      <p>Architect & Engineer</p> 
-    </div>
-  </div>
-
-  <div class="card">
-    <img src="https://media.istockphoto.com/id/1330273554/vector/female-avatar-icon.jpg?s=612x612&w=0&k=20&c=Da_L6eUftAYN1nNphgDSbcmbIXXsOD8SBidEGIQf2yw=" alt="Avatar" style="width:100%">
-    <div class="container">
-      <h4><b>John Doe</b></h4> 
-      <p>Architect & Engineer</p> 
-    </div>
-  </div>
-
-    <div class="card">
-      <img src="https://t3.ftcdn.net/jpg/06/20/20/64/360_F_620206479_fOLUtjNW28XsvcX9Nj12DgGogcbZFfhW.jpg" alt="Avatar" style="width:100%">
-      <div class="container">
-        <h4><b>Jane Doe</b></h4> 
-        <p>Interior Designer</p> 
-      </div>
-    </div>
-
-    <div class="card">
-      <img src="https://t4.ftcdn.net/jpg/06/32/94/19/360_F_632941905_x7n6hi2dngMjpmzi8SEInWtfrhWNzgvM.jpg" alt="Avatar" style="width:100%">
-      <div class="container">
-        <h4><b>Jane Doe</b></h4> 
-        <p>Interior Designer</p> 
-      </div>
-    </div>
-
-    <div class="card">
-      <img src="https://t3.ftcdn.net/jpg/06/20/20/64/360_F_620206479_fOLUtjNW28XsvcX9Nj12DgGogcbZFfhW.jpg" alt="Avatar" style="width:100%">
-      <div class="container">
-        <h4><b>Jane Doe</b></h4> 
-        <p>Interior Designer</p> 
-      </div>
-    </div>
-
-    <div class="card">
-      <img src="https://t4.ftcdn.net/jpg/06/32/94/19/360_F_632941905_x7n6hi2dngMjpmzi8SEInWtfrhWNzgvM.jpg" alt="Avatar" style="width:100%">
-      <div class="container">
-        <h4><b>Jane Doe</b></h4> 
-        <p>Interior Designer</p> 
-      </div>
-    </div>
-  <div class="card">
-    <img src="https://media.istockphoto.com/id/1330293099/vector/female-avatar-icon.jpg?s=612x612&w=0&k=20&c=PRXMHA1KOOhmpIH7zb5dVuBvkOCVoWZDAYeQBiUwJFw=" alt="Avatar" style="width:100%">
-    <div class="container">
-      <h4><b>John Doe</b></h4> 
-      <p>Architect & Engineer</p> 
-    </div>
-  </div>
-  
-  <div class="card">
-    <img src="https://media.istockphoto.com/id/1330273554/vector/female-avatar-icon.jpg?s=612x612&w=0&k=20&c=Da_L6eUftAYN1nNphgDSbcmbIXXsOD8SBidEGIQf2yw=" alt="Avatar" style="width:100%">
-    <div class="container">
-      <h4><b>John Doe</b></h4> 
-      <p>Architect & Engineer</p> 
-    </div>
+  <div class="wrapper">
+    <i id="left" class="fa-solid fa-angle-left"></i>
+    <ul class="carousel">
+      <li class="card">
+        <img src="https://media.istockphoto.com/id/1330293099/vector/female-avatar-icon.jpg?s=612x612&w=0&k=20&c=PRXMHA1KOOhmpIH7zb5dVuBvkOCVoWZDAYeQBiUwJFw=" alt="Avatar" style="width:100%">
+        <h2>Blanche Pearson</h2>
+        <span>Sales Manager</span>
+      </li>
+      <li class="card">
+        <img src="https://media.istockphoto.com/id/1330273554/vector/female-avatar-icon.jpg?s=612x612&w=0&k=20&c=Da_L6eUftAYN1nNphgDSbcmbIXXsOD8SBidEGIQf2yw=" alt="Avatar" style="width:100%">
+        <h2>Joenas Brauers</h2>
+        <span>Web Developer</span>
+      </li>
+      <li class="card">
+        <img src="https://media.istockphoto.com/id/1330293099/vector/female-avatar-icon.jpg?s=612x612&w=0&k=20&c=PRXMHA1KOOhmpIH7zb5dVuBvkOCVoWZDAYeQBiUwJFw=" alt="Avatar" style="width:100%">
+        <h2>Lariach French</h2>
+        <span>Online Teacher</span>
+      </li>
+      <li class="card">
+        <img src="https://media.istockphoto.com/id/1330273554/vector/female-avatar-icon.jpg?s=612x612&w=0&k=20&c=Da_L6eUftAYN1nNphgDSbcmbIXXsOD8SBidEGIQf2yw=" alt="Avatar" style="width:100%">
+        <h2>James Khosravi</h2>
+        <span>Freelancer</span>
+      </li>
+      <li class="card">
+        <img src="https://media.istockphoto.com/id/1330293099/vector/female-avatar-icon.jpg?s=612x612&w=0&k=20&c=PRXMHA1KOOhmpIH7zb5dVuBvkOCVoWZDAYeQBiUwJFw=" alt="Avatar" style="width:100%">
+        <h2>Kristina Zasiadko</h2>
+        <span>Bank Manager</span>
+      </li>
+      <li class="card">
+        <img src="https://media.istockphoto.com/id/1330273554/vector/female-avatar-icon.jpg?s=612x612&w=0&k=20&c=Da_L6eUftAYN1nNphgDSbcmbIXXsOD8SBidEGIQf2yw=" alt="Avatar" style="width:100%">
+        <h2>Donald Horton</h2>
+        <span>App Designer</span>
+      </li>
+    </ul>
+    <i id="right" class="fa-solid fa-angle-right"></i>
   </div>
 
-  <div class="card">
-    <img src="https://media.istockphoto.com/id/1330293099/vector/female-avatar-icon.jpg?s=612x612&w=0&k=20&c=PRXMHA1KOOhmpIH7zb5dVuBvkOCVoWZDAYeQBiUwJFw=" alt="Avatar" style="width:100%">
-    <div class="container">
-      <h4><b>John Doe</b></h4> 
-      <p>Architect & Engineer</p> 
-    </div>
-  </div>
 
-  <div class="card">
-    <img src="https://media.istockphoto.com/id/1330273554/vector/female-avatar-icon.jpg?s=612x612&w=0&k=20&c=Da_L6eUftAYN1nNphgDSbcmbIXXsOD8SBidEGIQf2yw=" alt="Avatar" style="width:100%">
-    <div class="container">
-      <h4><b>John Doe</b></h4> 
-      <p>Architect & Engineer</p> 
-    </div>
-  </div>
-
-    <div class="card">
-      <img src="https://t3.ftcdn.net/jpg/06/20/20/64/360_F_620206479_fOLUtjNW28XsvcX9Nj12DgGogcbZFfhW.jpg" alt="Avatar" style="width:100%">
-      <div class="container">
-        <h4><b>Jane Doe</b></h4> 
-        <p>Interior Designer</p> 
-      </div>
-    </div>
-
-    <div class="card">
-      <img src="https://t4.ftcdn.net/jpg/06/32/94/19/360_F_632941905_x7n6hi2dngMjpmzi8SEInWtfrhWNzgvM.jpg" alt="Avatar" style="width:100%">
-      <div class="container">
-        <h4><b>Jane Doe</b></h4> 
-        <p>Interior Designer</p> 
-      </div>
-    </div>
-
-    <div class="card">
-      <img src="https://t3.ftcdn.net/jpg/06/20/20/64/360_F_620206479_fOLUtjNW28XsvcX9Nj12DgGogcbZFfhW.jpg" alt="Avatar" style="width:100%">
-      <div class="container">
-        <h4><b>Jane Doe</b></h4> 
-        <p>Interior Designer</p> 
-      </div>
-    </div>
-
-    <div class="card">
-      <img src="https://t4.ftcdn.net/jpg/06/32/94/19/360_F_632941905_x7n6hi2dngMjpmzi8SEInWtfrhWNzgvM.jpg" alt="Avatar" style="width:100%">
-      <div class="container">
-        <h4><b>Jane Doe</b></h4> 
-        <p>Interior Designer</p> 
-      </div>
-    </div>
-    
-</div>
 </main>
 
     <footer>
