--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           <li class="nav_item">
             <a href="trancas.html" class="nav_link">Tranças</a>
             <a href="apliques.html" class="nav_link">Apliques</a>
+              <a href="cuidados.html" class="nav_link">cuidados</a>
             <a href="agendamento.html" class="nav_link">Agendamento</a>
           </li>
         </ul>
