--- a/trancas.html
+++ b/trancas.html
@@ -26,7 +26,7 @@
             </li>
           </ul>
 
-        <button class="button" id="form-open">Login</button>
+        <a class="button" role="button" href="login.html">Login</a>
       </nav>
     </header>
 
